--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 .navbar {
     overflow: hidden;
-    background-color: rgb(252, 247, 245, 0.35);
+    background-color: hwb(17 96% 1% / 0.35);
     position: fixed;
     top: 10px;
     left: 10px;
@@ -8,85 +8,79 @@
     z-index: 100;
     border-radius: 20px;
     backdrop-filter: blur(10px);
-    height: 70px;
+    height: 60px;
     display: flex;
     align-items: center;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 .navbar a {
-    display: block;
-    color: #333;
-    text-align: center;
-    padding: 14px 20px;
+    color: #0f1108;
+    padding: 20px;
     text-decoration: none;
     font-size: 14px;
     font-weight: bold;
     transition: background-color 0.3s ease;
-    margin: 0 10px;
-}
-
-.navbar a:not(.logo):hover {
-    background-color: #ddd;
-    color: black;
+    margin: 10px;
 }
 
 .navbar .logo {
     float: left;
-    margin-right: 10px;
 }
 
-.navbar .right-links {
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-}
-
-.navbar .right-links .navbar-list {
+.navbar .navbar-list {
     display: flex;
     list-style: none;
-    padding: 0;
+    margin-right: 20px;
+    margin-left: auto;
+    text-align: center;
 }
 
-.navbar .right-links .navbar-item {
-    margin-right: 5px;
-}
-
-.navbar .right-links .navbar-item a {
-    display: block;
-    color: #333;
+.navbar .navbar-item a {
+    color: #0f1108;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 20px;
     transition: background-color 0.3s ease;
 }
 
-.navbar .right-links .navbar-item a.resume {
-    background-color: #000000;
-    color: rgb(255, 255, 255);
+.navbar .navbar-item a.resume {
+    background-color: #0f1108;
+    color: #fcfdff;
     transition: outline 0.1s ease;
 }
 
-.navbar .right-links .navbar-item a.resume:hover {
-    outline: 3px solid #d8d8d8;
+.navbar .navbar-item a.resume:hover {
+    outline: 3px solid #d6d2d0;
     outline-offset: 1px;
 }
 
-.navbar .right-links .navbar-item a.no-color:hover {
-    background-color: #ededed;
+.navbar .navbar-item a.nav-link:hover {
+    background-color: #efeae8;
 }
 
+.navbar .hamburger {
+    display: none;
+  }
+
+hr.divider {
+    width: 100%;
+    height: 2px;
+    background-color: #ffd5d1;
+    border: none;
+  }
+
 footer {
-    padding: 20px;
+    margin-bottom: 35px;
+}
+
+.footing {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
     text-align: left;
-    border-radius: 20px;
-    margin-top: 20px;
-}
-
-footer p {
-    margin: 0;
+    margin-top: 44px;
+    margin-left: 115px;
+    margin-right: 115px;
 }
 
 footer a {
@@ -96,43 +90,36 @@ footer a {
 }
 
 footer a:hover {
-    color: black;
+    color: #b0acab;
 }
-
-footer .footer-divider {
+  
+hr.footer-divider {
     width: 100%;
     height: 1px;
     background-color: #efeae8;
-    margin: 10px 0;
-}
+    border: none;
+  }
 
-footer .footer-divider2 {
-    width: 100%;
-    height: 2px;
-    background-color: #ffd5d1;
-    margin: 10px 0;
-}
-
-footer .footer-text {
-    margin-top: 10px;
+footer .copyright {
+    margin-top: 35px;
     font-size: 12px;
     color: #777;
 }
 
 footer .footer-heading {
+    color: #0f1108;
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 10px;
-}
-
-footer .footer-link { 
-    display: inline-block;
-    margin-right: 10px;
 }
 
 footer ul {
+    display: flex;
+    justify-content: space-between;
+    max-width: 545px;
+    margin-top: 35px;
+    margin-bottom: 35px;  
     list-style-type: none;
-    padding-left: 0px; /
+    padding-left: 0px;
 }
 
 footer .footer-link::before {
@@ -144,75 +131,135 @@ footer .footer-link::before {
     margin-right: 5px;
 }
 
-footer ul {
-    display: flex;
-    justify-content: space-between;
-    padding-right: 60%;
-}
-
 body {
     background-color: #fcf7f5;
     font-family: Helvetica, Arial, sans-serif;
 }
 
-main {
-    margin-top: 90px;
+.container {
+    max-width: 1440px;
     margin-left: 50px;
     margin-right: 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    justify-content: center;
-}
-
-.hero-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.hero-section h1 {
+    grid-template-columns: repeat(12, 1fr);
+  }
+  
+  main {
+    display: grid;
+    grid-column: 2 / span 10;
+    margin-top: 90px;
+  }
+  
+  .hero-section {
+    grid-column: 1 / span 8;
+    margin-right: 20px;
+    place-items: center;
+  }
+  
+  .hero-section h1 {
     font-size: 64px;
-}
-
-.hero-section p {
+  }
+  
+  .hero-section p {
     font-size: 32px;
-}
-
-.hero-section h1,
-.hero-section p {
-    text-align: left;
-}
-
-.hero-image img {
+  }
+  
+  .hero-image {
+    grid-column: 9 / span 4;
+    place-items: center;
+  }
+  
+  .hero-image img {
     max-width: 442px;
     max-height: 442px;
-    display: block;
-    margin: 0 auto;
-    height: auto;
-}
-
-.welcome-arrow {
+  }
+  
+  .welcome-arrow {
     text-align: center;
-    grid-column: 1 / span 2;
-}
-
-.welcome-arrow::after {
+    grid-column: 1 / span 12;
+    margin-top: 20px;
+    margin-bottom: 52px;
+  }
+  
+  .welcome-arrow::after {
     content: "\e5db";
     font-family: "Material Symbols Rounded", sans-serif;
     font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 200, 'opsz' 24;
     vertical-align: middle;
-}
+  }
 
-@media (max-width: 393px) {
-    main {
+.container {
+    max-width: 1440px;
+    margin-left: 50px;
+    margin-right: 50px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 40px;
+  }
+  
+
+@media screen and (max-width: 800px) {
+    .navbar .navbar-list {
+        display: none;
+      }
+    
+    .navbar .hamburger {
+        display: inline;
+        font-family: "Material Symbols Rounded", sans-serif;
+        font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 200, 'opsz' 40;
+        margin-left: auto;
+        margin-right: 20px;
+      }
+
+      .container {
         margin-left: 20px;
         margin-right: 20px;
+        display: grid;
         grid-template-columns: 1fr;
-    }
-
-    .welcome-arrow {
+      }
+      
+      main {
+        display: grid;
         grid-column: 1;
+        margin-top: 50px;
+      }
+      
+      .hero-section {
+        grid-column: 1;
+        padding: 20px;
+      }
+      
+      .hero-section h1 {
+        font-size: 64px;
+        margin-bottom: 10px;
+      }
+      
+      .hero-section p {
+        font-size: 32px;
+        margin-bottom: 20px;
+      }
+      
+      .hero-image {
+        grid-column: 1;
+        text-align: center;
+      }
+      
+      .hero-image img {
+        max-width: 442px;
+        max-height: 442px;
+        height: auto;
+        margin: 0 auto;
+      }
+      
+      .welcome-arrow {
+        text-align: center;
+        grid-column: 1;
+      }
+      
+      .welcome-arrow::after {
+        content: "\e5db";
+        font-family: "Material Symbols Rounded", sans-serif;
+        font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 200, 'opsz' 24;
+        vertical-align: middle;
+      }
     }
-}
